# OminiX-Ascend

./: AGENTS.md  CHANGELOG.md  NATIVE_TTS_CONTRACT.md  README.md  change.md
docs/: asr_a4c_gate.md  asr_optimization_learnings.md  asr_regression_drift_investigation.md  cann_optimizations.md  cp_group_dependency_audit.md  cuda_qie_optimization.md  deck_ascend_agentic_ai.md  gguf_quant_exploration.md  qie_edit_nan_diagnosis.md  qie_eye_gate_suite.md  qie_q0_5_fiav2_seq4352.md  qie_q21_fallback_audit.md  qie_q21_smoke.md  qie_q22_repack_smoke.md  qie_q2_phase4_smoke.md  qie_q4_cfg_batching.md  qie_rope_precompute_lift.md  qwen_tts_optimization_writeup.md  swiglu_probe_verdict.md  v2_rope_numerics_debug.md
docs/contracts/: 40FPS_CONTRACT.md  QWEN3_ASR_CONTRACT.md  QWEN_IMAGE_EDIT_2511_CONTRACT.md
ggml/src/ggml-cann/: aclnn_ops.cpp  aclnn_ops.h  ggml-cann.cpp
ggml/src/ggml-cpu/: ops.cpp
include/: llama.h
scripts/: native_tts_quality_gate.sh
src/: CMakeLists.txt  llama-arch.cpp  llama-arch.h  llama-batch.cpp  llama-batch.h  llama-context.cpp  llama-graph.cpp  llama-hparams.h  llama-model.cpp  llama-vocab.cpp  llama-vocab.h  llama.cpp
src/models/: models.h  vits.cpp
tools/: CMakeLists.txt
tools/ominix_diffusion/src/: diffusion_model.hpp  qwen_image.hpp  stable-diffusion.cpp
tools/probes/: qie_q4_repack_check.py
tools/probes/qie_block0_cpu_reference/: test_qie_block0_cpu_reference.cpp
tools/probes/qie_q2454l_repack_probe/: qkv_matmul_oracle.py  repack_roundtrip.py
tools/probes/qie_q2_q4resident_probe/: build_and_run_q4_1.sh  test_qie_q4_1_probe.cpp
tools/qwen_asr/: CMakeLists.txt  README.md  audio_encoder.cpp
tools/qwen_asr/native/: asr_text_decoder_engine.cpp  asr_text_decoder_engine.h  main_native.cpp
tools/qwen_common/: CMakeLists.txt  audio_io.cpp  audio_io.h  bpe_tokenizer.cpp  bpe_tokenizer.h  build_graph.cpp  build_graph.h  ctx_manager.cpp  ctx_manager.h  model_loader.cpp  model_loader.h  utils.cpp  utils.h
tools/qwen_image_edit/cuda/: bench_qie_diffusers.py
tools/qwen_tts/: CMakeLists.txt  README.md  cp_cann_engine.cpp  cp_cann_engine.h  cp_cann_symbols.cpp  cp_cann_symbols.h  export_qwen_tts.py  export_talker_llama.py  main.cpp  qwen_tts.cpp  qwen_tts.h  qwen_tts_api.cpp  qwen_tts_api.h  speech_tokenizer_decoder.cpp  speech_tokenizer_decoder.h  speech_tokenizer_encoder.cpp  talker.cpp  talker.h  talker_cann_engine.cpp  talker_cann_engine.h  test_rope_v2_reopen.cpp  tts_transformer.cpp  tts_transformer.h
tools/qwen_tts/ascendc/: fused_attn_sublayer.cpp
tools/qwen_tts/data/voices/: voices.json
tools/qwen_tts/scripts/: bake_voices.sh
