# Qwen3-TTS Voice Clone Implementation

find_package(Threads REQUIRED)
find_package(OpenMP)

set(TARGET qwen_tts)
set(SRC_FILES
    main.cpp
    qwen_tts.cpp
    talker.cpp
    tts_transformer.cpp
    speaker_encoder.cpp
    speech_tokenizer_encoder.cpp
    speech_tokenizer_decoder.cpp
    model_defs.cpp
    stft.cpp
)

# Native CP CANN engine: optional, enabled on Ascend where CANN headers exist.
# We dlopen the CANN libs at runtime (see cp_cann_symbols.cpp) so nothing
# needs to be linked — just need the toolkit headers + libdl.
option(QWEN_TTS_CP_CANN "Build native CP CANN engine (Ascend only)" OFF)
if(DEFINED ENV{ASCEND_TOOLKIT_HOME} AND EXISTS "$ENV{ASCEND_TOOLKIT_HOME}/aarch64-linux/include/acl/acl.h")
    set(QWEN_TTS_CP_CANN ON CACHE BOOL "" FORCE)
endif()
if(QWEN_TTS_CP_CANN)
    list(APPEND SRC_FILES cp_cann_engine.cpp cp_cann_symbols.cpp
                          talker_cann_engine.cpp)
    message(STATUS "qwen_tts: CP CANN engine ENABLED (+ native Talker)")
endif()

# llama.cpp fallback Talker path: optional, default OFF. When OFF, the
# `--llama_fallback` runtime flag prints a clear error and exits; the
# native TalkerCannEngine is the only backbone path. When ON, llama.cpp
# is linked and `--llama_fallback` runs the original hybrid code path.
option(QWEN_TTS_LLAMA "Link llama.cpp fallback into qwen_tts" OFF)
if(QWEN_TTS_LLAMA)
    message(STATUS "qwen_tts: llama.cpp fallback ENABLED (QWEN_TTS_LLAMA=ON)")
else()
    message(STATUS "qwen_tts: llama.cpp fallback DISABLED "
                   "(native-only; enable with -DQWEN_TTS_LLAMA=ON)")
endif()

# kissfft library for STFT computation
set(KISSFFT_DIR ${CMAKE_CURRENT_SOURCE_DIR}/../../vendor/kissfft)
set(KISSFFT_SRC
    ${KISSFFT_DIR}/kiss_fft.c
    ${KISSFFT_DIR}/kiss_fftr.c
)
list(APPEND SRC_FILES ${KISSFFT_SRC})

add_executable(${TARGET} ${SRC_FILES})

# Base deps. llama is only linked when QWEN_TTS_LLAMA=ON. The `llama.h`
# header is still included by talker.h for type declarations (llama_batch
# field, etc.) so we keep the include path visible in both configs; the
# actual library is skipped in the OFF case.
target_link_libraries     (${TARGET} PUBLIC ggml qwen_common)
target_include_directories(${TARGET} PRIVATE ${CMAKE_SOURCE_DIR}/include)
if(QWEN_TTS_LLAMA)
    target_link_libraries     (${TARGET} PUBLIC llama)
    target_compile_definitions(${TARGET} PRIVATE QWEN_TTS_LLAMA=1)
endif()

# Native CP CANN engine: implemented via dlopen/dlsym at runtime to sidestep
# CANN stub-lib circular deps. We only need libdl + the toolkit headers.
target_link_libraries     (${TARGET} PRIVATE Threads::Threads)
if(QWEN_TTS_CP_CANN)
    target_link_libraries(${TARGET} PRIVATE ${CMAKE_DL_LIBS})
    target_compile_definitions(${TARGET} PRIVATE QWEN_TTS_HAS_CP_CANN=1)
    target_include_directories(${TARGET} PRIVATE
        $ENV{ASCEND_TOOLKIT_HOME}/aarch64-linux/include)
endif()
target_include_directories(${TARGET} PUBLIC  .)
target_include_directories(${TARGET} PRIVATE ../.. ../../vendor ${KISSFFT_DIR}
    $ENV{ASCEND_TOOLKIT_HOME}/include)
target_compile_features   (${TARGET} PRIVATE cxx_std_17)

# Enable NEON F16 intrinsics for ARM
if(CMAKE_SYSTEM_PROCESSOR MATCHES "aarch64|arm64")
    target_compile_options(${TARGET} PRIVATE -march=armv8.2-a+fp16)
endif()

# OpenMP for parallel CP matvec
if(OpenMP_CXX_FOUND)
    target_link_libraries(${TARGET} PRIVATE OpenMP::OpenMP_CXX)
endif()

if (BUILD_SHARED_LIBS)
    set_target_properties     (${TARGET} PROPERTIES POSITION_INDEPENDENT_CODE ON)
    target_compile_definitions(${TARGET} PRIVATE LLAMA_BUILD)
    target_compile_definitions(${TARGET} PUBLIC  LLAMA_SHARED)
endif()

set_target_properties(${TARGET} PROPERTIES OUTPUT_NAME ${TARGET})
if(LLAMA_TOOLS_INSTALL)
    install(TARGETS ${TARGET} RUNTIME)
endif()
# `common` is llama.cpp's utility lib (PUBLIC-links libllama). Only needed
# when we're actually on the llama.cpp path. qwen_tts sources don't use it.
if(QWEN_TTS_LLAMA)
    target_link_libraries  (${TARGET} PRIVATE common)
endif()
target_link_libraries  (${TARGET} PRIVATE Threads::Threads)
target_compile_features(${TARGET} PRIVATE cxx_std_17)

# Test: Code Predictor verification
set(TEST_CP_SRC
    test_code_predictor.cpp
    talker.cpp
    model_defs.cpp
)
add_executable(test_code_predictor ${TEST_CP_SRC})
target_link_libraries     (test_code_predictor PUBLIC ggml llama qwen_common)
target_link_libraries     (test_code_predictor PRIVATE Threads::Threads common)
target_include_directories(test_code_predictor PUBLIC  .)
target_include_directories(test_code_predictor PRIVATE ../.. ../../vendor)
target_compile_definitions(test_code_predictor PRIVATE QWEN_TTS_LLAMA=1)
target_compile_features   (test_code_predictor PRIVATE cxx_std_17)

# Test: Talker LLM integration
set(TEST_TALKER_SRC
    test_talker.cpp
    talker.cpp
    model_defs.cpp
)
add_executable(test_talker ${TEST_TALKER_SRC})
target_link_libraries     (test_talker PUBLIC ggml llama qwen_common)
target_link_libraries     (test_talker PRIVATE Threads::Threads common)
target_include_directories(test_talker PUBLIC  .)
target_include_directories(test_talker PRIVATE ../.. ../../vendor)
target_compile_definitions(test_talker PRIVATE QWEN_TTS_LLAMA=1)
target_compile_features   (test_talker PRIVATE cxx_std_17)

# Test: Speech Tokenizer Encoder
set(TEST_ENCODER_SRC
    test_encoder.cpp
    speech_tokenizer_encoder.cpp
    model_defs.cpp
)
add_executable(test_encoder ${TEST_ENCODER_SRC})
target_link_libraries     (test_encoder PUBLIC ggml llama qwen_common)
target_link_libraries     (test_encoder PRIVATE Threads::Threads common)
target_include_directories(test_encoder PUBLIC  .)
target_include_directories(test_encoder PRIVATE ../.. ../../vendor)
target_compile_features   (test_encoder PRIVATE cxx_std_17)

# Test: CP autoregressive flow
set(TEST_CP_FLOW_SRC
    test_cp_flow.cpp
    talker.cpp
    model_defs.cpp
)
add_executable(test_cp_flow ${TEST_CP_FLOW_SRC})
target_link_libraries     (test_cp_flow PUBLIC ggml llama qwen_common)
target_link_libraries     (test_cp_flow PRIVATE Threads::Threads common)
target_include_directories(test_cp_flow PUBLIC  .)
target_include_directories(test_cp_flow PRIVATE ../.. ../../vendor)
target_compile_definitions(test_cp_flow PRIVATE QWEN_TTS_LLAMA=1)
target_compile_features   (test_cp_flow PRIVATE cxx_std_17)

# Test: BPE Tokenizer
add_executable(test_tokenizer test_tokenizer.cpp)
target_link_libraries     (test_tokenizer PRIVATE Threads::Threads qwen_common)
target_include_directories(test_tokenizer PRIVATE . ../.. ../../vendor)
target_compile_features   (test_tokenizer PRIVATE cxx_std_17)

# Test: native TalkerCannEngine (Ascend only). Only built when the CANN
# engine source is present — it depends on cp_cann_symbols + the aclnn
# headers. The test pulls in the engine and its symbol loader directly; it
# does NOT link talker.cpp (no need for the llama.cpp Talker path).
if(QWEN_TTS_CP_CANN)
    add_executable(test_talker_native
        test_talker_native.cpp
        talker_cann_engine.cpp
        cp_cann_symbols.cpp
        model_defs.cpp
    )
    target_link_libraries     (test_talker_native PUBLIC ggml llama qwen_common)
    target_link_libraries     (test_talker_native PRIVATE Threads::Threads common
                                                           ${CMAKE_DL_LIBS})
    target_include_directories(test_talker_native PUBLIC  .)
    target_include_directories(test_talker_native PRIVATE ../.. ../../vendor
        $ENV{ASCEND_TOOLKIT_HOME}/aarch64-linux/include
        $ENV{ASCEND_TOOLKIT_HOME}/include)
    target_compile_definitions(test_talker_native PRIVATE QWEN_TTS_HAS_CP_CANN=1)
    target_compile_features   (test_talker_native PRIVATE cxx_std_17)
    if(CMAKE_SYSTEM_PROCESSOR MATCHES "aarch64|arm64")
        target_compile_options(test_talker_native PRIVATE -march=armv8.2-a+fp16)
    endif()
endif()
